Revise README for SpendSpark application
Updated README to reflect new features and technologies.